study arithmetic shell and sortCompare